// Vitest Snapshot v1

exports[`template-template > should be able to compile a template 1`] = `
"Hi Mr. Anderson,

We regret having to break this bad news to you, but your cat died.

Signed Your Eternal Friends at MegaCorp,
Agent Smith"
`;

exports[`template-template > should be able to compile a template, in immediate mode 1`] = `
"Hi Mr. Anderson,

We regret having to break this bad news to you, but your cat died.

Signed Your Eternal Friends at MegaCorp,
Agent Smith"
`;

exports[`template-template > should be able to pre-compile templates for export 1`] = `
"function anonymous(_tpltpl_vars
) {
const {name,company,agent,news,reason} = _tpltpl_vars
return \`Hi \${name},

\${news === 'good'
  ? 'We are delighted to inform you that'
  : 'We regret having to break this bad news to you, but'
} \${reason}

Signed Your Eternal Friends at \${company},
\${agent}\`
}"
`;

exports[`template-template > should be cool with backticks 1`] = `"This is a markdown string with \`code\`."`;

exports[`template-template > should handle logic of good news 1`] = `
"Hi Mr. Anderson,

We are delighted to inform you that you won the lottery.

Signed Your Eternal Friends at MegaCorp,
Agent Smith"
`;
